old-code/cluster/apps/flux-system/addons/webhooks/github/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-webhook
  namespace: flux-system
  annotations:
    external-dns.alpha.kubernetes.io/target: "ingress.127.0.0.2.nip.io"
  labels:
    use-cloudflare-solver: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: &host "flux-webhook.127.0.0.2.nip.io"
      http:
        paths:
          - path: /hook/
            pathType: Prefix
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
  tls:
    - hosts:
        - *host
